tinygrad_repo/extra/qcom_gpu_driver/msm_kgsl.py

# type: ignore
# -*- coding: utf-8 -*-
#
# TARGET arch is: []
# WORD_SIZE is: 8
# POINTER_SIZE is: 8
# LONGDOUBLE_SIZE is: 16
#
import ctypes


class AsDictMixin:
    @classmethod
    def as_dict(cls, self):
        result = {}
        if not isinstance(self, AsDictMixin):
            # not a structure, assume it's already a python object
            return self
        if not hasattr(cls, "_fields_"):
            return result
        # sys.version_info >= (3, 5)
        # for (field, *_) in cls._fields_:  # noqa
        for field_tuple in cls._fields_:  # noqa
            field = field_tuple[0]
            if field.startswith('PADDING_'):
                continue
            value = getattr(self, field)
            type_ = type(value)
            if hasattr(value, "_length_") and hasattr(value, "_type_"):
                # array
                if not hasattr(type_, "as_dict"):
                    value = [v for v in value]
                else:
                    type_ = type_._type_
                    value = [type_.as_dict(v) for v in value]
            elif hasattr(value, "contents") and hasattr(value, "_type_"):
                # pointer
                try:
                    if not hasattr(type_, "as_dict"):
                        value = value.contents
                    else:
                        type_ = type_._type_
                        value = type_.as_dict(value.contents)
                except ValueError:
                    # nullptr
                    value = None
            elif isinstance(value, AsDictMixin):
                # other structure
                value = type_.as_dict(value)
            result[field] = value
        return result


class Structure(ctypes.Structure, AsDictMixin):

    def __init__(self, *args, **kwds):
        # We don't want to use positional arguments fill PADDING_* fields

        args = dict(zip(self.__class__._field_names_(), args))
        args.update(kwds)
        super(Structure, self).__init__(**args)

    @classmethod
    def _field_names_(cls):
        if hasattr(cls, '_fields_'):
            return (f[0] for f in cls._fields_ if not f[0].startswith('PADDING'))
        else:
            return ()

    @classmethod
    def get_type(cls, field):
        for f in cls._fields_:
            if f[0] == field:
                return f[1]
        return None

    @classmethod
    def bind(cls, bound_fields):
        fields = {}
        for name, type_ in cls._fields_:
            if hasattr(type_, "restype"):
                if name in bound_fields:
                    if bound_fields[name] is None:
                        fields[name] = type_()
                    else:
                        # use a closure to capture the callback from the loop scope
                        fields[name] = (
                            type_((lambda callback: lambda *args: callback(*args))(
                                bound_fields[name]))
                        )
                    del bound_fields[name]
                else:
                    # default callback implementation (does nothing)
                    try:
                        default_ = type_(0).restype().value
                    except TypeError:
                        default_ = None
                    fields[name] = type_((
                        lambda default_: lambda *args: default_)(default_))
            else:
                # not a callback function, use default initialization
                if name in bound_fields:
                    fields[name] = bound_fields[name]
                    del bound_fields[name]
                else:
                    fields[name] = type_()
        if len(bound_fields) != 0:
            raise ValueError(
                "Cannot bind the following unknown callback(s) {}.{}".format(
                    cls.__name__, bound_fields.keys()
            ))
        return cls(**fields)


class Union(ctypes.Union, AsDictMixin):
    pass



c_int128 = ctypes.c_ubyte*16
c_uint128 = c_int128
void = None
if ctypes.sizeof(ctypes.c_longdouble) == 16:
    c_long_double_t = ctypes.c_longdouble
else:
    c_long_double_t = ctypes.c_ubyte*16




# values for enumeration 'kgsl_user_mem_type'
kgsl_user_mem_type__enumvalues = {
    0: 'KGSL_USER_MEM_TYPE_PMEM',
    1: 'KGSL_USER_MEM_TYPE_ASHMEM',
    2: 'KGSL_USER_MEM_TYPE_ADDR',
    3: 'KGSL_USER_MEM_TYPE_ION',
    3: 'KGSL_USER_MEM_TYPE_DMABUF',
    7: 'KGSL_USER_MEM_TYPE_MAX',
}
KGSL_USER_MEM_TYPE_PMEM = 0
KGSL_USER_MEM_TYPE_ASHMEM = 1
KGSL_USER_MEM_TYPE_ADDR = 2
KGSL_USER_MEM_TYPE_ION = 3
KGSL_USER_MEM_TYPE_DMABUF = 3
KGSL_USER_MEM_TYPE_MAX = 7
kgsl_user_mem_type = ctypes.c_uint32 # enum

# values for enumeration 'kgsl_ctx_reset_stat'
kgsl_ctx_reset_stat__enumvalues = {
    0: 'KGSL_CTX_STAT_NO_ERROR',
    1: 'KGSL_CTX_STAT_GUILTY_CONTEXT_RESET_EXT',
    2: 'KGSL_CTX_STAT_INNOCENT_CONTEXT_RESET_EXT',
    3: 'KGSL_CTX_STAT_UNKNOWN_CONTEXT_RESET_EXT',
}
KGSL_CTX_STAT_NO_ERROR = 0
KGSL_CTX_STAT_GUILTY_CONTEXT_RESET_EXT = 1
KGSL_CTX_STAT_INNOCENT_CONTEXT_RESET_EXT = 2
KGSL_CTX_STAT_UNKNOWN_CONTEXT_RESET_EXT = 3
kgsl_ctx_reset_stat = ctypes.c_uint32 # enum

# values for enumeration 'kgsl_deviceid'
kgsl_deviceid__enumvalues = {
    0: 'KGSL_DEVICE_3D0',
    1: 'KGSL_DEVICE_MAX',
}
KGSL_DEVICE_3D0 = 0
KGSL_DEVICE_MAX = 1
kgsl_deviceid = ctypes.c_uint32 # enum
class struct_kgsl_devinfo(Structure):
    pass

struct_kgsl_devinfo._pack_ = 1 # source:False
struct_kgsl_devinfo._fields_ = [
    ('device_id', ctypes.c_uint32),
    ('chip_id', ctypes.c_uint32),
    ('mmu_enabled', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('gmem_gpubaseaddr', ctypes.c_uint64),
    ('gpu_id', ctypes.c_uint32),
    ('PADDING_1', ctypes.c_ubyte * 4),
    ('gmem_sizebytes', ctypes.c_uint64),
]

class struct_kgsl_devmemstore(Structure):
    pass

struct_kgsl_devmemstore._pack_ = 1 # source:False
struct_kgsl_devmemstore._fields_ = [
    ('soptimestamp', ctypes.c_uint32),
    ('sbz', ctypes.c_uint32),
    ('eoptimestamp', ctypes.c_uint32),
    ('sbz2', ctypes.c_uint32),
    ('preempted', ctypes.c_uint32),
    ('sbz3', ctypes.c_uint32),
    ('ref_wait_ts', ctypes.c_uint32),
    ('sbz4', ctypes.c_uint32),
    ('current_context', ctypes.c_uint32),
    ('sbz5', ctypes.c_uint32),
]


# values for enumeration 'kgsl_timestamp_type'
kgsl_timestamp_type__enumvalues = {
    1: 'KGSL_TIMESTAMP_CONSUMED',
    2: 'KGSL_TIMESTAMP_RETIRED',
    3: 'KGSL_TIMESTAMP_QUEUED',
}
KGSL_TIMESTAMP_CONSUMED = 1
KGSL_TIMESTAMP_RETIRED = 2
KGSL_TIMESTAMP_QUEUED = 3
kgsl_timestamp_type = ctypes.c_uint32 # enum
class struct_kgsl_shadowprop(Structure):
    pass

struct_kgsl_shadowprop._pack_ = 1 # source:False
struct_kgsl_shadowprop._fields_ = [
    ('gpuaddr', ctypes.c_uint64),
    ('size', ctypes.c_uint64),
    ('flags', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

class struct_kgsl_version(Structure):
    pass

struct_kgsl_version._pack_ = 1 # source:False
struct_kgsl_version._fields_ = [
    ('drv_major', ctypes.c_uint32),
    ('drv_minor', ctypes.c_uint32),
    ('dev_major', ctypes.c_uint32),
    ('dev_minor', ctypes.c_uint32),
]

class struct_kgsl_sp_generic_mem(Structure):
    pass

struct_kgsl_sp_generic_mem._pack_ = 1 # source:False
struct_kgsl_sp_generic_mem._fields_ = [
    ('local', ctypes.c_uint64),
    ('pvt', ctypes.c_uint64),
]

class struct_kgsl_ucode_version(Structure):
    pass

struct_kgsl_ucode_version._pack_ = 1 # source:False
struct_kgsl_ucode_version._fields_ = [
    ('pfp', ctypes.c_uint32),
    ('pm4', ctypes.c_uint32),
]

class struct_kgsl_gpmu_version(Structure):
    pass

struct_kgsl_gpmu_version._pack_ = 1 # source:False
struct_kgsl_gpmu_version._fields_ = [
    ('major', ctypes.c_uint32),
    ('minor', ctypes.c_uint32),
    ('features', ctypes.c_uint32),
]

class struct_kgsl_ibdesc(Structure):
    pass

struct_kgsl_ibdesc._pack_ = 1 # source:False
struct_kgsl_ibdesc._fields_ = [
    ('gpuaddr', ctypes.c_uint64),
    ('__pad', ctypes.c_uint64),
    ('sizedwords', ctypes.c_uint64),
    ('ctrl', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
]

class struct_kgsl_cmdbatch_profiling_buffer(Structure):
    pass

struct_kgsl_cmdbatch_profiling_buffer._pack_ = 1 # source:False
struct_kgsl_cmdbatch_profiling_buffer._fields_ = [
    ('wall_clock_s', ctypes.c_uint64),
    ('wall_clock_ns', ctypes.c_uint64),
    ('gpu_ticks_queued', ctypes.c_uint64),
    ('gpu_ticks_submitted', ctypes.c_uint64),
    ('gpu_ticks_retired', ctypes.c_uint64),
]

class struct_kgsl_device_getproperty(Structure):
    pass

struct_kgsl_device_getproperty._pack_ = 1 # source:False
struct_kgsl_device_getproperty._fields_ = [
    ('type', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('value', ctypes.POINTER(None)),
    ('sizebytes', ctypes.c_uint64),
]

class struct_kgsl_device_waittimestamp(Structure):
    pass

struct_kgsl_device_waittimestamp._pack_ = 1 # source:False
struct_kgsl_device_waittimestamp._fields_ = [
    ('timestamp', ctypes.c_uint32),
    ('timeout', ctypes.c_uint32),
]

class struct_kgsl_device_waittimestamp_ctxtid(Structure):
    pass

struct_kgsl_device_waittimestamp_ctxtid._pack_ = 1 # source:False
struct_kgsl_device_waittimestamp_ctxtid._fields_ = [
    ('context_id', ctypes.c_uint32),
    ('timestamp', ctypes.c_uint32),
    ('timeout', ctypes.c_uint32),
]

class struct_kgsl_ringbuffer_issueibcmds(Structure):
    pass

struct_kgsl_ringbuffer_issueibcmds._pack_ = 1 # source:False
struct_kgsl_ringbuffer_issueibcmds._fields_ = [
    ('drawctxt_id', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('ibdesc_addr', ctypes.c_uint64),
    ('numibs', ctypes.c_uint32),
    ('timestamp', ctypes.c_uint32),
    ('flags', ctypes.c_uint32),
    ('PADDING_1', ctypes.c_ubyte * 4),
]

class struct_kgsl_cmdstream_readtimestamp(Structure):
    pass

struct_kgsl_cmdstream_readtimestamp._pack_ = 1 # source:False
struct_kgsl_cmdstream_readtimestamp._fields_ = [
    ('type', ctypes.c_uint32),
    ('timestamp', ctypes.c_uint32),
]

class struct_kgsl_cmdstream_freememontimestamp(Structure):
    pass

struct_kgsl_cmdstream_freememontimestamp._pack_ = 1 # source:False
struct_kgsl_cmdstream_freememontimestamp._fields_ = [
    ('gpuaddr', ctypes.c_uint64),
    ('type', ctypes.c_uint32),
    ('timestamp', ctypes.c_uint32),
]

class struct_kgsl_drawctxt_create(Structure):
    pass

struct_kgsl_drawctxt_create._pack_ = 1 # source:False
struct_kgsl_drawctxt_create._fields_ = [
    ('flags', ctypes.c_uint32),
    ('drawctxt_id', ctypes.c_uint32),
]

class struct_kgsl_drawctxt_destroy(Structure):
    pass

struct_kgsl_drawctxt_destroy._pack_ = 1 # source:False
struct_kgsl_drawctxt_destroy._fields_ = [
    ('drawctxt_id', ctypes.c_uint32),
]

class struct_kgsl_map_user_mem(Structure):
    pass

struct_kgsl_map_user_mem._pack_ = 1 # source:False
struct_kgsl_map_user_mem._fields_ = [
    ('fd', ctypes.c_int32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('gpuaddr', ctypes.c_uint64),
    ('len', ctypes.c_uint64),
    ('offset', ctypes.c_uint64),
    ('hostptr', ctypes.c_uint64),
    ('memtype', kgsl_user_mem_type),
    ('flags', ctypes.c_uint32),
]

class struct_kgsl_cmdstream_readtimestamp_ctxtid(Structure):
    pass

struct_kgsl_cmdstream_readtimestamp_ctxtid._pack_ = 1 # source:False
struct_kgsl_cmdstream_readtimestamp_ctxtid._fields_ = [
    ('context_id', ctypes.c_uint32),
    ('type', ctypes.c_uint32),
    ('timestamp', ctypes.c_uint32),
]

class struct_kgsl_cmdstream_freememontimestamp_ctxtid(Structure):
    pass

struct_kgsl_cmdstream_freememontimestamp_ctxtid._pack_ = 1 # source:False
struct_kgsl_cmdstream_freememontimestamp_ctxtid._fields_ = [
    ('context_id', ctypes.c_uint32),
    ('PADDING_0', ctypes.c_ubyte * 4),
    ('gpuaddr', ctypes.c_uint64),
    ('type', ctypes.c_uint32),
    ('timestamp', ctypes.c_uint32),
]

class struct_kgsl_sharedmem_from_pmem(Structure):
    pass
